--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafting Adventures Home</title>
+    <link rel="stylesheet" href="https://github.com/alexanderkokona/wdd130/blob/main/wwr/styles/style.css">
 </head>
 
 <body>
