--- a/wwr/ICE/ICE-6.html
+++ b/wwr/ICE/ICE-6.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="gridcontainer">
-        <img src="ICE_images/w06_ice_img.png" alt="graphic of two cherries with a stem">
+        <img class="first-two-rows"> src="ICE_images/w06_ice_img.png" alt="graphic of two cherries with a stem" </img>
+        <h1 class="two-column-heading">Tart & Sweet</h1>
+        <h1 class="footer">Cherries</h1>
     </div>
 </body>
 </html>
