--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="styles/personal-style.css" />
 </head>
 
 <body>
@@ -98,7 +98,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        [Page2] test
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
