--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -98,7 +98,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2] test
+        [Page2]
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
