fixed and added wireframes

--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -113,6 +113,55 @@
 
     <h3>Home</h3>
 
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wireframe</title>
+    <style>
+        body {
+            font-family: Merriweather, EB Garamond;
+            margin: 0;
+            padding: 0;
+        }
+        header, section, footer {
+            padding: 20px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+        header {
+            background-color: #A1E8AF;
+        }
+        footer {
+            background-color: #A1E8AF;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Projects</h1>
+    </header>
+    <section>
+        <h2>Main Content Section</h2>
+        <p>Lists of projects</p>
+    </section>
+    <section>
+      <h2>Main Content Section</h2>
+      <p>About me</p>
+  </section>
+  <section>
+    <h2>Main Content Section</h2>
+    <p>Resume</p>
+</section>
+    <footer>
+        <h3>Footer Section</h3>
+        <p>Footer content goes here.</p>
+    </footer>
+</body>
+</html>
+
+
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
