added two more sections and added some content

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -119,6 +119,7 @@
 
     <h3>Home</h3>
     
+<!--Section 1-->
     <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -146,15 +147,107 @@
 </head>
 <body>
     <header>
-        <h1>Activities</h1>
+        <h1>Activities to Enjoy!</h1>
     </header>
     <section>
         <h2>Lists of activities</h2>
-        <p>Information about the activities, trails (by river), and info on equipment</p>
+        <p>Information about the activities, trails (by river), and info on equipment
+          A very general description of the various activities available
+          A small picture to entice the people
+          A rating from reviewers
+        </p>
     </section>
     <footer>
-        <h3>Footer Section</h3>
-        <p>Footer content goes here.</p>
+        <h3></h3>
+        <p>links to the other pages</p>
+    </footer>
+</body>
+</html>
+
+<!--Section 2-->
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wireframe</title>
+    <style>
+        body {
+            font-family: Merriweather, EB Garamond;
+            margin: 0;
+            padding: 0;
+        }
+        header, section, footer {
+            padding: 20px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+        header {
+            background-color: #A1E8AF;
+        }
+        footer {
+            background-color: #A1E8AF;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Details of the Activities</h1>
+    </header>
+    <section>
+        <h2>Activities</h2>
+        <p>A more detailed description of the various activities 
+          Best time to do said activities, group sizes, events, etc
+          Maybe more pictures          
+        </p>
+    </section>
+    <footer>
+        <h3></h3>
+        <p>links to the other pages</p>
+    </footer>
+</body>
+</html>
+
+<!--Section 3-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wireframe</title>
+    <style>
+        body {
+            font-family: Merriweather, EB Garamond;
+            margin: 0;
+            padding: 0;
+        }
+        header, section, footer {
+            padding: 20px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+        header {
+            background-color: #A1E8AF;
+        }
+        footer {
+            background-color: #A1E8AF;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Reviews of the Activities</h1>
+    </header>
+    <section>
+        <h2>Reviews</h2>
+        <p>A list of “reviews” from my own friends and family
+          A funny add-on to add pizzazz and life to the website
+          A blank profile picture with a star review and their text review          
+        </p>
+    </section>
+    <footer>
+        <h3></h3>
+        <p>links to the other pages</p>
     </footer>
 </body>
 </html>
