--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -253,6 +253,8 @@
 </html>
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="images/Raft1.HEIC" alt="Raft Home and Activities Details" />
+    <img src="images/Raft2.HEIC" alt="Raft List of Activites and Reviews" />
 
     <h3>[Page 2]</h3>
 
