--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -163,6 +163,8 @@
 
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="images/Personal1.HEIC" alt="Personal Home and Projects" />
+    <img src="images/Personal2.HEIC" alt="Personal Resume and Bio" />
 
     <h3>[Page 2]</h3>
 
