corrected labeling for wireframes and content

--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -108,8 +108,10 @@
       <div class="right">&nbsp;</div>
     </div>
     <hr />
-    <h2>Wireframes</h2>
-    <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
+
+
+    <h2>Content</h2>
+    <!--Content that will be put into the website-->
 
     <h3>Home</h3>
 
@@ -118,7 +120,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
+    <title>Content</title>
     <style>
         body {
             font-family: Merriweather, EB Garamond;
@@ -161,6 +163,8 @@
 </body>
 </html>
 
+<h2>Wireframes</h2>
+<!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
     <img src="images/Personal1.HEIC" alt="Personal Home and Projects" />
