--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -165,14 +165,17 @@
 
 <h2>Wireframes</h2>
 <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
-
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
-    <img src="C:\Users\alext\Documents\wdd130\wwr\images\Personal1.png" alt="Personal Home and Projects" />
-    <img src="C:\Users\alext\Documents\wdd130\wwr\images\Personal2.png" alt="Personal Resume and Bio" />
 
     <h3>[Page 2]</h3>
-
     <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="C:\Users\alext\Documents\wdd130\wwr\images\Personal1.png" alt="Personal Home and Projects" />
+
+    <h3>[Page 3]</h3>
+    <!--page 3 wireframe-->
+    <img src="C:\Users\alext\Documents\wdd130\wwr\images\Personal2.png" alt="Personal Resume and Bio" />
+
+  
   </main>
 </body>
 
