Added correct conent sections with basic labels

--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -113,8 +113,8 @@
     <h2>Content</h2>
     <!--Content that will be put into the website-->
 
-    <h3>Home</h3>
-
+    <h3>Home Page</h3>
+    <!--Home Page-->
     <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -148,14 +148,88 @@
         <h2>Main Content Section</h2>
         <p>Lists of projects</p>
     </section>
+    <footer>
+        <h3>Footer Section</h3>
+        <p>Footer content goes here.</p>
+    </footer>
+</body>
+</html>
+
+<!--Page 2-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Content</title>
+    <style>
+        body {
+            font-family: Merriweather, EB Garamond;
+            margin: 0;
+            padding: 0;
+        }
+        header, section, footer {
+            padding: 20px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+        header {
+            background-color: #A1E8AF;
+        }
+        footer {
+            background-color: #A1E8AF;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Projects</h1>
+    </header>
     <section>
       <h2>Main Content Section</h2>
-      <p>About me</p>
-  </section>
-  <section>
-    <h2>Main Content Section</h2>
-    <p>Resume</p>
-</section>
+      <p>Resume</p>
+    </section>  
+    <footer>
+        <h3>Footer Section</h3>
+        <p>Footer content goes here.</p>
+    </footer>
+</body>
+</html>
+
+<!--Page 3-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Content</title>
+    <style>
+        body {
+            font-family: Merriweather, EB Garamond;
+            margin: 0;
+            padding: 0;
+        }
+        header, section, footer {
+            padding: 20px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+        header {
+            background-color: #A1E8AF;
+        }
+        footer {
+            background-color: #A1E8AF;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Projects</h1>
+    </header>
+    <section>
+      <h2>Main Content Section</h2>
+      <p>Biography</p>
+    </section>
     <footer>
         <h3>Footer Section</h3>
         <p>Footer content goes here.</p>
@@ -166,14 +240,12 @@
 <h2>Wireframes</h2>
 <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="C:\Users\alext\Documents\wdd130\wwr\images\Personal1.png" alt="Personal Home and Projects" />
+    <img src="C:\Users\alext\Documents\wdd130\wwr\images\Personal2.png" alt="Personal Resume and Bio" />
 
     <h3>[Page 2]</h3>
-    <!-- <img src="#" alt="page 2 wireframe"> -->
-    <img src="C:\Users\alext\Documents\wdd130\wwr\images\Personal1.png" alt="Personal Home and Projects" />
 
     <h3>[Page 3]</h3>
-    <!--page 3 wireframe-->
-    <img src="C:\Users\alext\Documents\wdd130\wwr\images\Personal2.png" alt="Personal Resume and Bio" />
 
   
   </main>
