content / wireframe images

--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -183,7 +183,7 @@
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <h1>Resume</h1>
     </header>
     <section>
       <h2>Main Content Section</h2>
@@ -224,7 +224,7 @@
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <h1>Biography</h1>
     </header>
     <section>
       <h2>Main Content Section</h2>
