--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -240,8 +240,8 @@
 <h2>Wireframes</h2>
 <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
-    <img src="wwr/personal1-1.png" alt="Personal Home and Projects" />
-    <img src="wwr/personal2-1.png" alt="Personal Resume and Bio" />
+    <img src="images/Personal1.jpg" alt="Personal Home and Projects" />
+    <img src="images/Personal2.jpg" alt="Personal Resume and Bio" />
 
     <h3>[Page 2]</h3>
 
