--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -142,15 +142,16 @@
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <h1>Projects (header)</h1>
     </header>
     <section>
         <h2>Main Content Section</h2>
-        <p>Lists of projects</p>
+        <p>Lists of projects
+            Programing projects - malware, recovery code, Area Book Scheduler, home lab
+        </p>
     </section>
     <footer>
         <h3>Footer Section</h3>
-        <p>Footer content goes here.</p>
     </footer>
 </body>
 </html>
@@ -187,11 +188,11 @@
     </header>
     <section>
       <h2>Main Content Section</h2>
-      <p>Resume</p>
+      <p>Resume (image to be added later)</p>
+
     </section>  
     <footer>
         <h3>Footer Section</h3>
-        <p>Footer content goes here.</p>
     </footer>
 </body>
 </html>
@@ -224,15 +225,18 @@
 </head>
 <body>
     <header>
-        <h1>Biography</h1>
+        <h1>Biography (header)</h1>
     </header>
     <section>
       <h2>Main Content Section</h2>
-      <p>Biography</p>
+      <p>Biography:
+        Paragraph 1 - Upbringing, family history, where I grew up
+        Paragraph 2 - Highschool and mission
+        Paragraph 3 - Personal interests, hobbies, goals
+      </p>
     </section>
     <footer>
         <h3>Footer Section</h3>
-        <p>Footer content goes here.</p>
     </footer>
 </body>
 </html>
