--- a/wwr/personal-site-plan.html
+++ b/wwr/personal-site-plan.html
@@ -229,11 +229,10 @@
     </header>
     <section>
       <h2>Main Content Section</h2>
-      <p>Biography:
-        Paragraph 1 - Upbringing, family history, where I grew up
-        Paragraph 2 - Highschool and mission
-        Paragraph 3 - Personal interests, hobbies, goals
-      </p>
+      <p>Biography:</p>
+      <p>Paragraph 1 - Upbringing, family history, where I grew up</p>
+      <p>Paragraph 2 - Highschool and mission</p>
+      <p>Paragraph 3 - Personal interests, hobbies, goals</p>
     </section>
     <footer>
         <h3>Footer Section</h3>
